# c-utf8

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dev.cmake
bench/: CMakeLists.txt  b-strings.cpp  picobench-main.cpp
code/: CMakeLists.txt
code/c-utf8/: convert.h  convert.hpp
test/: CMakeLists.txt  t-c-utf8.c  t-c-utf8.cpp
